# zksync-protocol

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  deny.toml  release-plz.toml  rust-toolchain
crates/circuit_definitions/: Cargo.toml
crates/circuit_definitions/src/: lib.rs
crates/circuit_definitions/src/aux_definitions/: witness_oracle.rs
crates/circuit_definitions/src/circuit_definitions/: mod.rs  verifier_builder.rs
crates/circuit_encodings/: Cargo.toml
crates/circuit_encodings/src/: callstack_entry.rs  commitments.rs  decommittment_request.rs  lib.rs  log_query.rs  memory_query.rs  recursion_request.rs  utils.rs
crates/circuit_sequencer_api/: Cargo.toml
crates/circuit_sequencer_api/src/: commitments.rs  geometry_config.rs  lib.rs  sort_storage_access.rs  toolset.rs  utils.rs
crates/kzg/: Cargo.toml  README.md
crates/kzg/src/: kzg_info.rs  lib.rs  trusted_setup.rs
crates/kzg/src/tests/: mod.rs
crates/vk_regression_checker/: .gitignore  Cargo.toml  README.md
crates/vk_regression_checker/reference/: verification_basic_1_key.json  verification_compression_1_key.json  verification_compression_2_key.json  verification_compression_3_key.json  verification_compression_4_key.json  verification_compression_wrapper_1_key.json  verification_compression_wrapper_5_key.json  verification_leaf_3_key.json  verification_scheduler_key.json
crates/vk_regression_checker/src/: artifacts.rs  cli.rs  comparison.rs  file_io.rs  generation.rs  main.rs
crates/zkEVM-assembly/: Cargo.toml
crates/zkEVM-assembly/src/assembly/: mod.rs
crates/zk_evm/: Cargo.toml
crates/zk_evm/src/: flags.rs  lib.rs  tracing.rs  utils.rs
crates/zk_evm/src/block_properties/: mod.rs
crates/zk_evm/src/errors/: mod.rs
crates/zk_evm/src/opcodes/: parsing.rs
crates/zk_evm/src/reference_impls/: decommitter.rs  event_sink.rs  memory.rs  mod.rs
crates/zk_evm/src/testing/: mod.rs  storage.rs
crates/zk_evm/src/vm_state/: cycle.rs  execution_stack.rs  helpers.rs  mem_ops.rs  mod.rs
crates/zk_evm/src/witness_trace/: mod.rs
crates/zk_evm_abstractions/: Cargo.toml
crates/zk_evm_abstractions/src/: auxiliary.rs  lib.rs  queries.rs  vm.rs
crates/zk_evm_abstractions/src/precompiles/: ecadd.rs  ecmul.rs  ecmultipairing_naive.rs  ecpairing.rs  ecrecover.rs  keccak256.rs  mod.rs  modexp.rs  secp256r1_verify.rs  sha256.rs
crates/zk_evm_abstractions/src/utils/: airbender_bn254.rs  bn254.rs  mod.rs
crates/zk_evm_api/: Cargo.toml  generation_response.json
crates/zk_evm_api/src/: default_tracer.rs  entry_point.rs  lib.rs  storage_oracle.rs  toolset.rs  tracer.rs  utils.rs
crates/zkevm_circuits/: Cargo.toml
crates/zkevm_circuits/.github/workflows/: ci.yaml
crates/zkevm_circuits/src/: lib.rs  utils.rs
crates/zkevm_circuits/src/bn254/: README.md  fixed_base_mul_table.rs  mod.rs  utils.rs  validation.rs
crates/zkevm_circuits/src/code_unpacker_sha256/: input.rs  mod.rs
crates/zkevm_circuits/src/demux_log_queue/: input.rs  mod.rs
crates/zkevm_circuits/src/ecrecover/: baseline.rs  input.rs  new_optimized.rs
crates/zkevm_circuits/src/eip_4844/: input.rs  mod.rs
crates/zkevm_circuits/src/fsm_input_output/: mod.rs
crates/zkevm_circuits/src/keccak256_round_function/: input.rs  mod.rs
crates/zkevm_circuits/src/linear_hasher/: input.rs  mod.rs
crates/zkevm_circuits/src/log_sorter/: input.rs
crates/zkevm_circuits/src/main_vm/: cycle.rs  loading.rs  pre_state.rs  register_input_view.rs
crates/zkevm_circuits/src/modexp/: .gitignore  README.md  input.rs  mod.rs  modexp.sage  test.rs
crates/zkevm_circuits/src/ram_permutation/: input.rs  mod.rs
crates/zkevm_circuits/src/recursion/: mod.rs
crates/zkevm_circuits/src/scheduler/: auxiliary.rs  input.rs  mod.rs
crates/zkevm_circuits/src/secp256r1_verify/: baseline.rs  input.rs
crates/zkevm_circuits/src/sha256_round_function/: input.rs  mod.rs
crates/zkevm_circuits/src/sort_decommittment_requests/: input.rs  mod.rs
crates/zkevm_circuits/src/storage_application/: input.rs  mod.rs
crates/zkevm_circuits/src/storage_validity_by_grand_product/: input.rs  mod.rs
crates/zkevm_circuits/src/transient_storage_validity_by_grand_product/: input.rs
crates/zkevm_opcode_defs/: Cargo.toml
crates/zkevm_opcode_defs/src/: circuit_prices.rs  lib.rs  opcode.rs  system_params.rs
crates/zkevm_opcode_defs/src/decoding/: mod.rs
crates/zkevm_opcode_defs/src/definitions/: far_call.rs  log.rs  mod.rs  opcode_trait.rs
crates/zkevm_test_harness/: .gitignore  Cargo.toml  fuzz.sh  rust-toolchain.toml
crates/zkevm_test_harness/.github/workflows/: ci.yaml
crates/zkevm_test_harness/fuzz/: .gitignore  Cargo.toml
crates/zkevm_test_harness/fuzz/fuzz_targets/: fuzz_target_1.rs  precompiles_ecadd.rs  precompiles_ecmul.rs  precompiles_ecpairing.rs  precompiles_encode.rs  precompiles_modexp.rs
crates/zkevm_test_harness/setup/base_layer/: finalization_hint_1.json  finalization_hint_10.json  finalization_hint_11.json  finalization_hint_12.json  finalization_hint_14.json  finalization_hint_15.json  finalization_hint_16.json  finalization_hint_17.json  finalization_hint_18.json  finalization_hint_19.json  finalization_hint_2.json  finalization_hint_20.json  finalization_hint_255.json  finalization_hint_3.json  finalization_hint_4.json  finalization_hint_5.json  finalization_hint_6.json  finalization_hint_7.json  finalization_hint_8.json  finalization_hint_9.json  vk_1.json  vk_15.json  vk_16.json  vk_17.json  vk_18.json  vk_19.json  vk_2.json  vk_20.json  vk_4.json  vk_7.json  vk_8.json  vk_9.json
crates/zkevm_test_harness/setup/recursion_layer/: finalization_hint_1.json  finalization_hint_10.json  finalization_hint_11.json  finalization_hint_19.json  finalization_hint_20.json  finalization_hint_21.json  finalization_hint_22.json  finalization_hint_23.json  finalization_hint_4.json  finalization_hint_node.json  finalization_hint_recursion_tip.json  vk_1.json  (+14 more)
crates/zkevm_test_harness/src/: capacity_estimator.rs  compute_setups.rs  debug.rs  entry_point.rs  external_calls.rs  lib.rs  prover_utils.rs  run_vms.rs  toolset.rs  utils.rs
(+427 files in other folders)
