[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
# All the packages in the workspace should have the same version
version = "0.153.8"                                            # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-protocol/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
circuit_definitions = { version = "=0.153.7", path = "crates/circuit_definitions" }
circuit_encodings = { version = "=0.153.7", path = "crates/circuit_encodings" }
circuit_sequencer_api = { version = "=0.153.7", path = "crates/circuit_sequencer_api" }
kzg = { version = "=0.153.7", path = "crates/kzg", package = "zksync_kzg" }
zk_evm = { version = "=0.153.7", path = "crates/zk_evm" }
zk_evm_abstractions = { version = "=0.153.7", path = "crates/zk_evm_abstractions" }
zkevm_circuits = { version = "=0.153.7", path = "crates/zkevm_circuits" }
zkevm_opcode_defs = { version = "=0.153.7", path = "crates/zkevm_opcode_defs" }
zkevm_test_harness = { version = "=0.153.7", path = "crates/zkevm_test_harness" }
zkevm-assembly = { version = "=0.153.7", path = "crates/zkEVM-assembly" }

# `zksync-crypto` workspace dependencies
snark_wrapper = "=0.32.9"
bellman = { package = "zksync_bellman", version = "=0.32.9" }
boojum = "=0.32.9"
cs_derive = { package = "zksync_cs_derive", version = "=0.32.9" }
zksync_pairing = "=0.32.9"
