[package]
name = "circuit_encodings"
version = "0.142.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era circuits encodings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zkevm_circuits = { version = "0.141"} # Not pinned, because it's an old dependency used by MultiVM
#zk_evm = { version = "0.141"} # Not pinned, because it's an old dependency used by MultiVM

zk_evm = { git = "https://github.com/matter-labs/zksync-protocol", branch = "mmzk_v0_141_3" }
zkevm_circuits = {  git = "https://github.com/matter-labs/zksync-protocol", branch = "mmzk_v0_141_3" }


derivative = "2.2"
serde = {version = "1", features = ["derive"]}


[features]
default = []
log_tracing = ["zkevm_circuits/log_tracing"]
