[package]
name = "circuit_sequencer_api"
version = "0.140.3"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era circuits API for sequencer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circuit_encodings = { version = "0.140", path = "../circuit_encodings" } # Not pinned, because it's an old version used only by MultiVM

zk_evm = { version = "0.140", path = "../zk_evm" } # Not pinned, because it's an old version used only by MultiVM
bellman = { package = "zksync_bellman", version = "0" } # Not pinned, because it's an old version used only by MultiVM


derivative = "2.2"
serde = {version = "1", features = ["derive"]}
rayon = "1.10"


[features]
default = []
