[package]
name = "circuit_sequencer_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync Era circuit API for sequencer"

[dependencies]
zk_evm.workspace = true
bellman.workspace = true

derivative = "2.2"
serde = {version = "1", features = ["derive"]}
rayon = "1.10"


[dev-dependencies]
zkevm_circuits.workspace = true

