[package]
name = "circuit_sequencer_api"
version = "0.142.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era circuits API for sequencer"

[dependencies]
circuit_encodings = { version = "0.142", path = "../circuit_encodings"}  # Not pinned, because it's an old dependency used by MultiVM

zk_evm = { version = "0.141"}
bellman = { package = "zksync_bellman", version = "0" } # Not pinned, because it's an old dependency used by MultiVM


derivative = "2.2"
serde = {version = "1", features = ["derive"]}
rayon = "1.10"


[features]
default = []
