[package]
name = "zksync_kzg"
version = "0.150.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era KZG implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = "2.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
rayon = "1.10"
hex = "0.4"
once_cell = "1"
serde_with = {version = "1", features = ["hex"]}

boojum = "=0.2.2"
zkevm_circuits = { version = "=0.150.3", path = "../zkevm_circuits" }

[dev-dependencies]
rand = "0.4"

[features]
default = []
