[package]
name = "zksync_kzg"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync Era KZG implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# "Owned" dependencies
boojum.workspace = true
zkevm_circuits.workspace = true

# "External" dependencies
derivative = "2.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
rayon = "1.10"
hex = "0.4"
once_cell = "1"
serde_with = {version = "1", features = ["hex"]}

[dev-dependencies]
rand = "0.4"

[features]
default = []
