[package]
name = "vk_regression_checker"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Verification key regression checker"
publish = false # This is a test-only crate

[dependencies]
circuit_definitions.workspace = true
zkevm_test_harness.workspace = true

anyhow = "1"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
