[package]
name = "zkevm-assembly"
version.workspace = true
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "The zkEVM common utilities"
repository = "https://github.com/matter-labs/era-zkEVM-assembly"

[[bin]]
name = "reader"
path = "src/reader/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
nom = "7"
hex = "0.4"
sha3 = "0.10.8"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
zkevm_opcode_defs.workspace = true
smallvec = "1.13"
