[package]
name = "zkevm-assembly"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The zkEVM common utilities"

[[bin]]
name = "reader"
path = "src/reader/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
nom = "7"
hex = "0.4"
sha3 = "0.10.8"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
zkevm_opcode_defs.workspace = true
smallvec = "1.13"
