[package]
name = "zk_evm"
version = "0.140.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zk_evm"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync out-of-circuit EraEVM implementation"

resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
num = { version = "0.4"}
static_assertions = "1"
zkevm_opcode_defs = { version = "=0.132.0", path = "../zkevm_opcode_defs" }
zk_evm_abstractions = { version = "=0.140.0", path = "../zk_evm_abstractions" }
lazy_static = "1.4"

[dev-dependencies]
hex = "0.4"

[features]
