[package]
name = "zk_evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync out-of-circuit EraEVM implementation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
num = { version = "0.4"}
static_assertions = "1"
zk_evm_abstractions.workspace = true
lazy_static = "1.4"

[dev-dependencies]
hex = "0.4"

[features]
