[package]
name = "zk_evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync out-of-circuit EraEVM implementation"

[dependencies]
# "Owned" dependencies
zk_evm_abstractions.workspace = true

# "External" dependencies
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
anyhow = { version = "1.0", default-features = false}
num = { version = "0.4", default-features = false}
static_assertions = "1"
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "inline-more", "default-hasher"] }


[dev-dependencies]
hex = "0.4"

[features]
