[package]
name = "zk_evm_abstractions"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync EraVM abstractions"

[dependencies]
# "Owned" dependencies
zkevm_opcode_defs.workspace = true

# "External" dependencies
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
static_assertions = "1"
num_enum = "0.6"

[dev-dependencies]
hex = "0.4"
