[package]
name = "zk_evm_abstractions"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync EraVM abstractions"

[dependencies]
# "Owned" dependencies
zkevm_opcode_defs.workspace = true

# "External" dependencies
anyhow = { version = "1.0", default-features=false}

serde = { version = "1", features = ["derive"], default-features = false }
static_assertions = "1"
num_enum = { version = "0.6", default-features = false }

[dev-dependencies]
hex = "0.4"
