[package]
name = "zk_evm_abstractions"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync EraVM abstractions"

[dependencies]
# "Owned" dependencies
zkevm_opcode_defs.workspace = true

# "External" dependencies
anyhow = "1.0"
cfg-if.workspace = true
serde = { version = "1", features = ["derive"] }
static_assertions = "1"
num_enum = "0.6"


[target.'cfg(target_arch = "riscv32")'.dependencies]
airbender-crypto = { workspace = true, optional = true, features = ["proving"] }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
airbender-crypto = { workspace = true, optional = true }

[features]
airbender-precompile-delegations = ["dep:airbender-crypto"]

[dev-dependencies]
hex = "0.4"
