[package]
name = "zkevm_circuits"
version.workspace = true
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_circuits"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era circuits for EraVM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.4"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "serde",
] }
arrayvec = "0.7"
itertools = "0.10"
rand_new = { package = "rand", version = "0.8" }
hex = "0.4"
seq-macro = "0.3"

zkevm_opcode_defs.workspace = true
cs_derive = "=0.2.2"
boojum = "=0.2.2"

[features]
default = []
log_tracing = ["boojum/log_tracing"]
verbose_circuits = []
