[package]
name = "zkevm_opcode_defs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync EraVM opcode definitions"

[[bin]]
name = "circuit_pricing_generator"
path = "src/circuit_pricing_generator/main.rs"

[dependencies]
# "Owned" dependencies
zksync_pairing.workspace = true

# "External" dependencies
bitflags = "2"
lazy_static = "1.4"
ethereum-types = "=0.14.1"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
blake2 = "0.10.*"
k256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"] }
p256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"] }
serde = { version = "1", features = ["derive"] }
