[package]
name = "zkevm_opcode_defs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync EraVM opcode definitions"

#[[bin]]
#name = "circuit_pricing_generator"
#path = "src/circuit_pricing_generator/main.rs"

[dependencies]
# "Owned" dependencies
zksync_pairing.workspace = true

# "External" dependencies
bitflags = "2"
#lazy_static = "1.4"
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }

ethereum-types = { version = "=0.14.1", default-features = false, features = ["serialize"] }

#ethereum-types = "=0.14.1"
sha2 = { version="0.10.8", default-features=false }
sha3 = { version="0.10.8", default-features=false }
blake2 = { version = "0.10.*", default-features=false } 
k256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"], default-features=false }
p256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"], default-features=false }
serde = { version = "1", features = ["derive"], default-features=false }
ruint = { version = "1.12.4", default-features = false }

#hashbrown = { version = "0.14", default-features = false, features = ["alloc", "inline-more", "ahash"] }
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "inline-more", "default-hasher"] }


#once_cell = { version = "1.18.0", default-features = false, features = ["alloc"] }
