[package]
name = "zkevm_test_harness"
version.workspace = true
edition = "2021"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>", "Konstantin Panarin <kp@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era proving utilities"

resolver = "2"

# [[bin]]
# name = "circuit_limit_estimator"
# path = "src/circuit_limit_estimator/main.rs"

# [[bin]]
# name = "circuit_synthesis_performance_test"
# path = "src/circuit_synthesis_performance_test/main.rs"

[[bin]]
name = "geometry_config_generator"
path = "src/geometry_config_generator/main.rs"

[dependencies]
circuit_definitions.workspace = true
circuit_sequencer_api.workspace = true
kzg.workspace = true

zkevm-assembly.workspace = true

rand = "0.4"
rayon = "1.10"
derivative = "2.2"
hex = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8"
tracing = { version= "0.1.26" }
bincode = "1.3"
test-log = "0.2"
env_logger = "0.9"
smallvec = "1.13"
structopt = "0.3.26"
codegen = "0.2.0"
regex = { version = "1.10.6", features = ["pattern"] }
peak_alloc = "0.2.0"

[dev-dependencies]
rand = "0.4"
indicatif = "0.16"

[profile.release]
debug = false
lto = false

[profile.bench]
debug = false

[features]
verbose_circuits = ["circuit_definitions/verbose_circuits", "circuit_sequencer_api/verbose_circuits"]
log_tracing = ["circuit_definitions/log_tracing"]

default = ["log_tracing"]
