[package]
name = "zkevm_test_harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ZKsync Era proving utilities"

# [[bin]]
# name = "circuit_limit_estimator"
# path = "src/circuit_limit_estimator/main.rs"

# [[bin]]
# name = "circuit_synthesis_performance_test"
# path = "src/circuit_synthesis_performance_test/main.rs"

[[bin]]
name = "geometry_config_generator"
path = "src/geometry_config_generator/main.rs"

[dependencies]
# "Owned" dependencies
circuit_definitions.workspace = true
circuit_sequencer_api.workspace = true
kzg.workspace = true
zkevm-assembly.workspace = true

# "External" dependencies
rand = "0.4"
rayon = "1.10"
derivative = "2.2"
hex = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8"
tracing = { version= "0.1.26" }
bincode = "1.3"
test-log = "0.2"
env_logger = "0.9"
smallvec = "1.13"
structopt = "0.3.26"
codegen = "0.2.0"
regex = "1.11.1"

[dev-dependencies]
rand = "0.4"
indicatif = "0.16"

[features]
verbose_circuits = ["circuit_definitions/verbose_circuits", "circuit_sequencer_api/verbose_circuits"]
#log_tracing = ["circuit_definitions/log_tracing"]
log_tracing = []

default = ["log_tracing"]
