[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hex = "0.4"
arbitrary = { version = "1.1.3", features = ["derive"] }

[dependencies.zkevm_test_harness]
path = ".."

[[bin]]
name = "precompiles_ecadd"
path = "fuzz_targets/precompiles_ecadd.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
